Fix: Group shape support in updateSvgFromLayers, save race condition, and multiple bug fixes
- Added group shape support in updateSvgFromLayers (creates <g> elements, processes children)
- Fixed save race condition in FILE_EXIT (await handleAction before closing window)
- Fixed onRenameLayer to call updateSvgFromLayers for SVG sync
- Fixed EDIT_CUT to use captured layerId instead of stale closure
- Fixed EDIT_PASTE floating promise with async IIFE and error handling
- Fixed EDIT_DELETE to capture layerId before async dialog
- Fixed missing void prefix on handleAction('FILE_SAVE') call
- Added fileOperationLoading prop to ProfessionalFileMenu (already fixed, verified)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node server.js",
     "dev:server": "node server.js",
     "build": "vite build",
     "preview": "vite preview",
@@ -53,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.2.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.0",
@@ -64,6 +65,7 @@
     "prettier": "^3.2.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.6",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   },
