Configure cut the cord features - internal.xi-io.com, offline mode, local AI setup

--- a/config/xibalba.config.json
+++ b/config/xibalba.config.json
@@ -21,7 +21,10 @@
     "portable": true,
     "usbReady": true,
     "requiresInternet": false,
-    "localAIOnly": true
+    "localAIOnly": true,
+    "cutTheCord": true,
+    "offlineMode": true,
+    "standaloneMode": true
   }
 }
 
