feat(design-system): Phase 2a - Create @xibalba/design-system shim package
- Add workspace configuration to package.json
- Create packages/xibalba-design-system with shim re-exports
- Shim components re-export from VectorForge (no breaking changes)
- Add package.json, README.md for design system package
- Zero breaking changes - VectorForge still works
- Enables incremental migration to package imports

Phase 2a complete. Ready for Phase 2b (move actual files).

--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "npx tsx server.js",
     "dev:vite": "vite",
     "dev:server": "npx tsx server.js",
-"build": "vite build",
+    "build": "vite build",
+    "build:design-system": "npm run build --workspace=@xibalba/design-system",
     "preview": "vite preview",
     "start": "NODE_ENV=production npx tsx server.js",
     "build:installer": "./scripts/build-installer.sh",
