--- a/packages/xibalba-design-system/package.json
+++ b/packages/xibalba-design-system/package.json
@@ -3,19 +3,14 @@
   "version": "0.1.0",
   "description": "Reusable design system components for Xibalba ecosystem",
   "private": true,
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "exports": {
-    ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.cjs.js",
-      "types": "./dist/index.d.ts"
-    }
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.build.json && tsc -p tsconfig.build.json --module commonjs --outDir dist/cjs",
-    "dev": "tsc -p tsconfig.build.json --watch"
+    "build": "echo 'Shim package - using source files directly (no build needed)'",
+    "type-check": "tsc --noEmit --skipLibCheck"
   },
   "peerDependencies": {
     "react": "^18.0.0",
