--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: .
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -21,27 +27,37 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: |
+        npm ci
+        echo "✅ Dependencies installed"
 
     - name: Run type check
       continue-on-error: true
-      run: npx tsc --noEmit || echo "TypeScript check completed with warnings (build will continue)"
+      run: |
+        echo "Running TypeScript type check..."
+        npx tsc --noEmit || echo "⚠️ TypeScript check completed with warnings (non-blocking)"
 
     - name: Build project
       run: |
-        npm run build || {
-          echo "❌ Build failed"
-          exit 1
-        }
+        echo "Building project..."
+        npm run build
+        echo "✅ Build completed"
 
-    - name: Check build output
+    - name: Verify build output
       run: |
+        echo "Verifying build output..."
         if [ ! -d "dist" ]; then
-          echo "❌ Build failed: dist directory not found"
+          echo "❌ ERROR: dist directory not found after build"
+          echo "Current directory contents:"
+          ls -la
           exit 1
         fi
         echo "✅ Build successful: dist directory exists"
-        ls -la dist/
+        echo "Build output:"
+        ls -lah dist/
+        echo ""
+        echo "Build size:"
+        du -sh dist/
 
   test:
     runs-on: ubuntu-latest
